--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "network-auto-deploy",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "agent": "node agent.js"
+  },
   "dependencies": {
-    "axios": "^1.13.4",
-    "ssh2": "^1.17.0"
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "ssh2": "^1.15.0"
   }
 }
